Fix weird Scrollbar behavior + Finishing touch on Scan scheduling UI

--- a/frontend-ce68-22/src/styles/globals.css
+++ b/frontend-ce68-22/src/styles/globals.css
@@ -56,6 +56,10 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+    overflow: hidden !important;
+}
+
 /* ::-webkit-scrollbar-track {
   background: #0F1518;
 }
